ww-frame/src/snapshots/ww_frame__frame__tests__to_raw_data_test-10.snap
---
source: ww-frame/src/frame.rs
description: Rendering a pink-green Catmull-Rom spline and then a blue-yellow one with no blend
info:
  objects:
    - object:
        CatmullRomSpline:
          points:
            - - 0.23
              - 0.45
              - 0.2
            - - -0.16
              - 0.4
              - 1.2
            - - -0.8
              - -0.09
              - 3.2
            - - 0.02
              - -0.86
              - 1.73
          threshold: 0.15
          start_colour:
            - 218
            - 44
            - 244
          end_colour:
            - 9
            - 237
            - 39
      colour:
        - 0
        - 0
        - 0
      fadeoff: 0.2
    - object:
        CatmullRomSpline:
          points:
            - - -0.2
              - -0.47
              - 2.89
            - - 0.31
              - -0.593
              - 1.65
            - - -0.86
              - -0.02
              - 2.3
            - - 0.04
              - 0.83
              - 1.2
            - - 0.34
              - -0.42
              - 1.7
            - - -0.4
              - -0.36
              - 1.98
          threshold: 0.25
          start_colour:
            - 19
            - 194
            - 247
          end_colour:
            - 249
            - 222
            - 14
      colour:
        - 0
        - 0
        - 0
      fadeoff: 0.4
  blend: false
---
[
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (207, 53, 233),
  (207, 53, 233),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (15, 21, 11),
  (150, 209, 114),
  (38, 51, 25),
  (47, 60, 27),
  (36, 44, 19),
  (175, 213, 88),
  (26, 32, 14),
  (31, 38, 16),
  (34, 42, 17),
  (0, 0, 0),
  (0, 0, 0),
  (18, 23, 10),
  (52, 75, 42),
  (33, 41, 17),
  (23, 28, 12),
  (26, 38, 21),
  (163, 211, 100),
  (166, 211, 97),
  (163, 211, 100),
  (159, 211, 104),
  (152, 210, 111),
  (42, 57, 29),
  (0, 0, 0),
  (0, 0, 0),
  (37, 52, 29),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (4, 5, 3),
  (23, 33, 19),
  (140, 208, 123),
  (18, 28, 16),
  (136, 208, 128),
  (40, 63, 39),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (16, 25, 16),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (15, 25, 17),
  (24, 41, 27),
  (0, 0, 0),
  (2, 4, 2),
  (19, 42, 35),
  (97, 203, 167),
  (101, 204, 163),
  (97, 203, 167),
  (92, 202, 172),
  (13, 30, 25),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (48, 43, 3),
  (46, 41, 3),
  (246, 221, 16),
  (92, 202, 172),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (3, 7, 6),
  (78, 201, 186),
  (85, 202, 179),
  (81, 75, 7),
  (237, 220, 25),
  (14, 73, 84),
  (88, 202, 177),
  (9, 57, 68),
  (239, 220, 23),
  (87, 79, 7),
  (27, 64, 56),
  (81, 201, 184),
  (78, 201, 186),
  (76, 201, 188),
  (78, 201, 186),
  (76, 201, 188),
  (74, 200, 191),
  (69, 200, 195),
  (67, 199, 198),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (34, 38, 12),
  (196, 215, 67),
  (20, 58, 57),
  (0, 0, 0),
  (1, 3, 3),
  (5, 16, 16),
  (24, 70, 68),
  (69, 200, 195),
  (74, 200, 191),
  (212, 217, 51),
  (214, 217, 48),
  (44, 197, 221),
  (48, 197, 216),
  (53, 198, 212),
  (200, 216, 62),
  (196, 215, 67),
  (196, 215, 67),
  (23, 25, 8),
  (11, 13, 4),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (1, 1, 0),
  (67, 77, 27),
  (17, 20, 7),
  (5, 6, 2),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (43, 50, 18),
  (0, 0, 0),
  (23, 27, 10),
  (66, 77, 29),
  (37, 43, 16),
  (20, 24, 8),
  (184, 214, 79),
  (44, 52, 19),
  (25, 29, 11),
  (25, 30, 11),
  (45, 54, 22),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (168, 212, 95),
  (168, 212, 95),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (50, 58, 21),
  (56, 66, 24),
  (184, 214, 79),
  (184, 214, 79),
  (184, 214, 79),
  (184, 214, 79),
  (191, 215, 72),
  (61, 69, 23),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (13, 20, 12),
  (47, 70, 42),
  (0, 0, 0),
  (134, 208, 130),
  (131, 207, 132),
  (131, 207, 132),
  (43, 70, 45),
  (21, 36, 24),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (32, 195, 233),
  (7, 42, 51),
  (10, 65, 78),
  (8, 58, 70),
  (35, 195, 230),
  (37, 196, 228),
  (39, 196, 226),
  (42, 196, 223),
  (44, 197, 221),
  (39, 196, 226),
  (16, 72, 81),
  (6, 31, 35),
  (10, 55, 63),
  (35, 195, 230),
  (0, 0, 0),
  (4, 30, 35),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (1, 10, 13),
  (5, 52, 67),
  (5, 56, 71),
  (4, 33, 40),
  (21, 194, 244),
  (3, 23, 28),
  (1, 9, 11),
  (7, 66, 83),
  (0, 0, 1),
  (2, 16, 19),
  (35, 195, 230),
  (32, 195, 233),
  (37, 196, 228),
]
