ww-frame/src/snapshots/ww_frame__frame__tests__to_raw_data_test-12.snap
---
source: ww-frame/src/frame.rs
description: Rendering a blue-yellow Catmull-Rom spline and then a pink-green one with no blend
info:
  objects:
    - object:
        CatmullRomSpline:
          points:
            - - -0.2
              - -0.47
              - 2.89
            - - 0.31
              - -0.593
              - 1.65
            - - -0.86
              - -0.02
              - 2.3
            - - 0.04
              - 0.83
              - 1.2
            - - 0.34
              - -0.42
              - 1.7
            - - -0.4
              - -0.36
              - 1.98
          threshold: 0.25
          start_colour:
            - 19
            - 194
            - 247
          end_colour:
            - 249
            - 222
            - 14
      colour:
        - 0
        - 0
        - 0
      fadeoff: 0.4
    - object:
        CatmullRomSpline:
          points:
            - - 0.23
              - 0.45
              - 0.2
            - - -0.16
              - 0.4
              - 1.2
            - - -0.8
              - -0.09
              - 3.2
            - - 0.02
              - -0.86
              - 1.73
          threshold: 0.15
          start_colour:
            - 218
            - 44
            - 244
          end_colour:
            - 9
            - 237
            - 39
      colour:
        - 0
        - 0
        - 0
      fadeoff: 0.2
  blend: false
---
[
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (172, 85, 199),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (14, 6, 16),
  (179, 79, 206),
  (207, 53, 233),
  (207, 53, 233),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (150, 209, 114),
  (0, 0, 0),
  (158, 98, 185),
  (158, 98, 185),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (169, 89, 196),
  (0, 0, 0),
  (151, 105, 179),
  (35, 27, 42),
  (29, 23, 35),
  (30, 24, 36),
  (144, 111, 172),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (159, 211, 104),
  (152, 210, 111),
  (42, 57, 29),
  (0, 0, 0),
  (0, 0, 0),
  (37, 52, 29),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (23, 33, 19),
  (140, 208, 123),
  (18, 28, 16),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (16, 25, 16),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (120, 134, 148),
  (0, 0, 0),
  (16, 18, 20),
  (0, 0, 0),
  (97, 203, 167),
  (101, 204, 163),
  (97, 203, 167),
  (92, 202, 172),
  (13, 30, 25),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (48, 43, 3),
  (46, 41, 3),
  (246, 221, 16),
  (92, 202, 172),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (3, 7, 6),
  (0, 0, 0),
  (0, 0, 0),
  (0, 5, 1),
  (0, 0, 0),
  (22, 224, 52),
  (0, 0, 0),
  (33, 214, 62),
  (26, 220, 56),
  (0, 0, 0),
  (4, 47, 11),
  (0, 0, 0),
  (78, 201, 186),
  (76, 201, 188),
  (78, 201, 186),
  (76, 201, 188),
  (0, 0, 0),
  (69, 200, 195),
  (67, 199, 198),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (34, 38, 12),
  (196, 215, 67),
  (20, 58, 57),
  (0, 0, 0),
  (1, 3, 3),
  (5, 16, 16),
  (24, 70, 68),
  (69, 200, 195),
  (74, 200, 191),
  (212, 217, 51),
  (214, 217, 48),
  (44, 197, 221),
  (48, 197, 216),
  (53, 198, 212),
  (200, 216, 62),
  (196, 215, 67),
  (196, 215, 67),
  (23, 25, 8),
  (11, 13, 4),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (1, 1, 0),
  (67, 77, 27),
  (17, 20, 7),
  (5, 6, 2),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (43, 50, 18),
  (0, 0, 0),
  (23, 27, 10),
  (66, 77, 29),
  (37, 43, 16),
  (20, 24, 8),
  (184, 214, 79),
  (44, 52, 19),
  (25, 29, 11),
  (25, 30, 11),
  (45, 54, 22),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (168, 212, 95),
  (168, 212, 95),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (50, 58, 21),
  (56, 66, 24),
  (184, 214, 79),
  (184, 214, 79),
  (184, 214, 79),
  (184, 214, 79),
  (191, 215, 72),
  (61, 69, 23),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (120, 134, 148),
  (116, 137, 144),
  (25, 30, 32),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (33, 214, 62),
  (33, 214, 62),
  (29, 217, 59),
  (0, 0, 0),
  (0, 3, 0),
  (0, 0, 0),
  (44, 197, 221),
  (39, 196, 226),
  (16, 72, 81),
  (6, 31, 35),
  (10, 55, 63),
  (35, 195, 230),
  (0, 0, 0),
  (4, 30, 35),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (1, 10, 13),
  (5, 52, 67),
  (5, 56, 71),
  (4, 33, 40),
  (21, 194, 244),
  (3, 23, 28),
  (1, 9, 11),
  (7, 66, 83),
  (0, 0, 1),
  (2, 16, 19),
  (35, 195, 230),
  (32, 195, 233),
  (37, 196, 228),
]
