ww-frame/src/snapshots/ww_frame__frame__tests__to_raw_data_test-13.snap
---
source: ww-frame/src/frame.rs
description: Rendering a blue-yellow Catmull-Rom spline and then a pink-green one with blend
info:
  objects:
    - object:
        CatmullRomSpline:
          points:
            - - -0.2
              - -0.47
              - 2.89
            - - 0.31
              - -0.593
              - 1.65
            - - -0.86
              - -0.02
              - 2.3
            - - 0.04
              - 0.83
              - 1.2
            - - 0.34
              - -0.42
              - 1.7
            - - -0.4
              - -0.36
              - 1.98
          threshold: 0.25
          start_colour:
            - 19
            - 194
            - 247
          end_colour:
            - 249
            - 222
            - 14
      colour:
        - 0
        - 0
        - 0
      fadeoff: 0.4
    - object:
        CatmullRomSpline:
          points:
            - - 0.23
              - 0.45
              - 0.2
            - - -0.16
              - 0.4
              - 1.2
            - - -0.8
              - -0.09
              - 3.2
            - - 0.02
              - -0.86
              - 1.73
          threshold: 0.15
          start_colour:
            - 218
            - 44
            - 244
          end_colour:
            - 9
            - 237
            - 39
      colour:
        - 0
        - 0
        - 0
      fadeoff: 0.2
  blend: true
---
[
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (86, 42, 99),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (7, 3, 8),
  (89, 39, 103),
  (103, 26, 116),
  (103, 26, 116),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (7, 10, 5),
  (75, 104, 57),
  (19, 25, 12),
  (102, 79, 106),
  (97, 71, 102),
  (87, 106, 44),
  (13, 16, 7),
  (15, 19, 8),
  (17, 21, 8),
  (84, 44, 98),
  (0, 0, 0),
  (84, 64, 94),
  (43, 51, 42),
  (31, 32, 26),
  (26, 26, 24),
  (85, 74, 96),
  (81, 105, 50),
  (83, 105, 48),
  (81, 105, 50),
  (79, 105, 52),
  (76, 105, 55),
  (21, 28, 14),
  (0, 0, 0),
  (0, 0, 0),
  (18, 26, 14),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (2, 2, 1),
  (11, 16, 9),
  (70, 104, 61),
  (9, 14, 8),
  (68, 104, 64),
  (20, 31, 19),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (8, 12, 8),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (7, 12, 8),
  (72, 87, 87),
  (0, 0, 0),
  (9, 11, 11),
  (9, 21, 17),
  (48, 101, 83),
  (50, 102, 81),
  (48, 101, 83),
  (46, 101, 86),
  (6, 15, 12),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (24, 21, 1),
  (23, 20, 1),
  (123, 110, 8),
  (46, 101, 86),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (1, 3, 3),
  (39, 100, 93),
  (42, 101, 89),
  (40, 40, 4),
  (118, 110, 12),
  (18, 148, 68),
  (44, 101, 88),
  (21, 135, 65),
  (132, 220, 39),
  (43, 39, 3),
  (15, 55, 33),
  (40, 100, 92),
  (39, 100, 93),
  (38, 100, 94),
  (39, 100, 93),
  (38, 100, 94),
  (37, 100, 95),
  (34, 100, 97),
  (33, 99, 99),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (17, 19, 6),
  (98, 107, 33),
  (10, 29, 28),
  (0, 0, 0),
  (0, 1, 1),
  (2, 8, 8),
  (12, 35, 34),
  (34, 100, 97),
  (37, 100, 95),
  (106, 108, 25),
  (107, 108, 24),
  (22, 98, 110),
  (24, 98, 108),
  (26, 99, 106),
  (100, 108, 31),
  (98, 107, 33),
  (98, 107, 33),
  (11, 12, 4),
  (5, 6, 2),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (33, 38, 13),
  (8, 10, 3),
  (2, 3, 1),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (21, 25, 9),
  (0, 0, 0),
  (11, 13, 5),
  (33, 38, 14),
  (18, 21, 8),
  (10, 12, 4),
  (92, 107, 39),
  (22, 26, 9),
  (12, 14, 5),
  (12, 15, 5),
  (22, 27, 11),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (84, 106, 47),
  (84, 106, 47),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (25, 29, 10),
  (28, 33, 12),
  (92, 107, 39),
  (92, 107, 39),
  (92, 107, 39),
  (92, 107, 39),
  (95, 107, 36),
  (30, 34, 11),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (6, 10, 6),
  (23, 35, 21),
  (0, 0, 0),
  (67, 104, 65),
  (65, 103, 66),
  (65, 103, 66),
  (81, 102, 96),
  (68, 86, 84),
  (12, 15, 16),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (16, 97, 116),
  (3, 21, 25),
  (21, 139, 70),
  (20, 136, 66),
  (32, 206, 144),
  (18, 98, 114),
  (19, 99, 113),
  (21, 98, 111),
  (22, 98, 110),
  (19, 98, 113),
  (8, 36, 40),
  (3, 15, 17),
  (5, 27, 31),
  (17, 97, 115),
  (0, 0, 0),
  (2, 15, 17),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 0, 0),
  (0, 5, 6),
  (2, 26, 33),
  (2, 28, 35),
  (2, 16, 20),
  (10, 97, 122),
  (1, 11, 14),
  (0, 4, 5),
  (3, 33, 41),
  (0, 0, 0),
  (1, 8, 9),
  (17, 97, 115),
  (16, 97, 116),
  (18, 98, 114),
]
